============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.0.9 - not yet released
* map
  - fix for hanging map on slow hardware

Version 6.0.8 - 2011/03/23
* don't estimate thermal source for skewed thermals
* devices
  - CAI302: fix task declaration on Android
  - EW microRecorder: minor task declaration fix
* configuration
  - Units: fix "feet per minute" support
  - save the "Auto Logger" setting
* Windows
  - use backslash for paths on Windows CE
* Android
  - calculate WGS84 to real altitude (internal GPS)
  - fix incorrect airspace warning repetitions
  - auto-reconnect to Bluetooth GPS after timeout
  - support the acceleration sensor
* Linux
  - more dialog improvements
  - fix bold font rendering
  - case insensitive file name matching

Version 6.0.7 - 2011/03/12
* devices
  - EW microRecorder: timeout during connect
  - EW microRecorder: increase RX timeout
  - EW microRecorder: insert new declaration into old EW-USER.TXT
* map
  - Airspace: support alternative OpenAir coordinate format
  - allow zooming in to 1 km
* replay: don't execute recorded input events
* Windows
  - hide the task bar on Windows CE Core
* Android
  - disable auto-restart on various Android configuration events
  - import time from internal GPS correctly
  - read internal GPS accuracy
  - the "back" hardware key cancels dialogs
  - map the volume keys to cursor up/down
* Linux
  - improved button and checkbox rendering
  - dialog keyboard navigation implemented
  - enable keyboard repeat

Version 6.0.6 - 2011/03/04
* devices:
  - fix declaration crash in Volkslogger, EW, CAI302, CAI GPS NAV
  - EW: remove duplicate newline in declaration output
* map
  - Airspace: add option to re-enable stencil buffer on PPC2000
* other
  - select waypoint: update heading filter only on large changes
  - reduce dialog memory usage
* Windows